--- a/TicTacToe.css
+++ b/TicTacToe.css
@@ -31,6 +31,7 @@ body {
     height: 40vw;
     grid-template-columns: auto auto auto;
     margin: 5vw;
+    aspect-ratio: 1/1;
 }
 
 .gameboard_item {
@@ -40,6 +41,11 @@ body {
     align-items: center;
     background-color: beige;
     font-size: 10vw;
+    aspect-ratio: 1/1;
+}
+
+.gameboard_item:hover {
+    background-color:rgb(204, 204, 185)
 }
 
 .start {
